# Temp_sensing_Reem-C

./: CITATION.cff  CMakeLists.txt  README.md  package.xml  reemc_pullback_node.py  temperature_receiver.py  temperature_receiver_node.py  temperature_transmitter_3pins.ino
.ipynb_checkpoints/: thermistor model-checkpoint.ipynb
3D CAD Reem-C Hand Models/: Cell_single.stl  Cells_back_hand.stl  H1_Hand_assembly.stl  H1_Hand_assembly_no+cells_solid+body.stl  H1_Hand_assembly_no+cells_solid+joint.stl  H1_Palm.stl
Arduino scripts & temp sensor analysis/: data.npy  thermistor model.ipynb
Arduino scripts & temp sensor analysis/.ipynb_checkpoints/: thermistor model-checkpoint.ipynb
Arduino scripts & temp sensor analysis/temperature_transmitter/: temperature_transmitter.ino
Final report & presentation/: System_overview.drawio
Glove Manufacturing/3D CAD Reem-C Hand Models/: Cells_palm.stl  H1_Hand_assembly_no+cells.stl  H1_finger.stl  H1_thumb.stl  Hand_motor_interface.stl
data/config/: ROS Master IP.txt
data/first batch/: data_analysis.ipynb
data/first batch/.ipynb_checkpoints/: data_analysis-checkpoint.ipynb
data/first batch/series1_2 sensors_12 cm/: data.npy  time_range.npy
data/first batch/series2_2 sensors_8 cm/: data.npy  time_range.npy
data/first batch/series3_2 sensors_10 cm/: data.npy  time_range.npy
data/first batch/series4_1 sensor_10 cm/: data.npy  time_range.npy
data/first batch/series5_2 sensors_20 cm/: data.npy  time_range.npy
data/first batch/series6_2 sensors_15 cm/: time_range.npy
launch/: protect_fingers.launch  temperature_sensing.launch
scripts/: data.npy  data_analysis.ipynb  finger_pullback_node.py  modified_move_joint.py  move_joint.py  temperature_receiver.py  temperature_receiver_node.py
scripts/.ipynb_checkpoints/: data_analysis-checkpoint.ipynb
scripts/arm_excitation/: CMakeLists.txt  package.xml
scripts/arm_excitation/config/: arm_calibration.yaml  arm_excitation.yaml  left_leg_excitation.yaml
scripts/arm_excitation/config/other_splines/: left_leg_excitation_1.yaml  right_leg_excitation.yaml  right_leg_excitation_1.yaml
scripts/arm_excitation/launch/: armCalibration.launch  armExcitation.launch  create_topics.sh  disable_topics.sh  enable_topics.sh  joitn_trajectory_controllers_fast_pub.launch  legsExcitation.launch  move_joint.launch  setSensorsPubRate.launch
scripts/arm_excitation/src/: arm_excitation.cpp  arm_excitation_cont.cpp
temperature_transmitter/: temperature_transmitter.ino
